--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -10,14 +10,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@prisma/client": "6.8.2"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "6.8.2",
+    
     "prisma": "^6.8.2"
   }
 }
