--- a/nginx-conf/nginx-stage.conf
+++ b/nginx-conf/nginx-stage.conf
@@ -27,7 +27,7 @@ http{
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
                 proxy_set_header Host $host;
-                proxy_cache_bypas $http_upgrade;
+                proxy_cache_bypass $http_upgrade;
         }
 }
 
